--- a/cruddb/modules/Application/src/Application/views/login/index.phtml
+++ b/cruddb/modules/Application/src/Application/views/login/index.phtml
@@ -1,4 +1,4 @@
-<form class="form-signin" role="form" method="post" action="login">
+<form class="form-signin" role="form" method="post" action="/login/index">
     <h2 class="form-signin-heading">Please sign in</h2>
     <label for="inputEmail" class="sr-only">User</label>
     <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="User" required autofocus>
